Updated code changes

--- a/solutions/index.html
+++ b/solutions/index.html
@@ -165,6 +165,39 @@
                 </div>
               </div>
             </article>
+
+            <article class="card reveal">
+              <div class="card-inner">
+                <div class="badge">
+                  <strong>🔥 MOST DEMANDED</strong>
+                  <span>💎 BEST VALUE · ⚡ LIMITED TIME 20% OFF</span>
+                </div>
+                <h2 style="font-size: 22px; margin-top: 10px">Premium Website Building Service</h2>
+                <p>
+                  Custom, premium websites built exactly as the owner wants—no forced templates. Designed to increase trust, bookings, and high-quality enquiries for villas, farmhouses, rentals, and local businesses.
+                </p>
+                <p style="margin-top: 8px; font-weight:600">
+                  Launch offer: <span style="font-size:20px">₹2,999</span> <span class="hint">(20% DISCOUNT – LIMITED TIME OFFER · Original price ₹3,999+)</span>
+                </p>
+                <ul class="list">
+                  <li><span class="check" aria-hidden="true">✓</span>Premium, mobile-friendly, SEO-optimized website</li>
+                  <li><span class="check" aria-hidden="true">✓</span>WhatsApp integration for direct, high-intent leads</li>
+                  <li><span class="check" aria-hidden="true">✓</span>Fast loading, secure, and built for conversion</li>
+                </ul>
+                <div style="display:flex; gap:10px; flex-wrap:wrap; margin-top: 14px">
+                  <a class="btn btn-ghost" href="/solutions/premium-website-building.html">View details</a>
+                  <a
+                    class="btn btn-primary"
+                    href="/solutions/premium-website-building.html#website-form"
+                  >
+                    Build My Website @ ₹2,999
+                  </a>
+                </div>
+                <p class="hint" style="margin-top: 8px">
+                  This is our MOST DEMANDED service. Market price for such websites is much higher. We are providing it at the lowest price with premium quality.
+                </p>
+              </div>
+            </article>
           </div>
         </div>
       </section>
